--- a/package.json
+++ b/package.json
@@ -12,50 +12,24 @@
   ],
   "author": {
     "name": "Lyubin P.G.",
-    "email": "lyubin.p@gmail.org",
-    "url": "http://www.openshift.com/"
+    "email": "lyubin.p@gmail.org"
   },
   "homepage": "http://www.openshift.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/openshift/origin-server"
+    "url": "https://github.com/pafik13/mdc.doctors-server.front"
   },
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.6.6",
-    "ejs": "2.3.4",
-    "grunt": "1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-coffee": "1.0.0",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
-    "grunt-contrib-jst": "1.0.0",
-    "grunt-contrib-less": "1.3.0",
-    "grunt-contrib-uglify": "1.0.1",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.5.2",
-    "include-all": "^1.0.0",
-	  "lodash": "^4.13.1",
-    "mongodb": "^2.2.10",
-    "rc": "1.0.1",
-    "sails": "~0.12.13",
-    "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.12.0",
-    "uuid": "^2.0.2",
-    "waterlock": "^0.1.2-rc1",
-    "waterlock-local-auth": "^0.1.2-rc1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
   "scripts": {
-    "debug": "node debug app.js",
-    "start": "node app.js"
+    "debug": "node debug server.js",
+    "start": "node server.js"
   },
-  "main": "app.js"
+  "main": "server.js"
 }
